--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,20 @@ img {
 .title {
   font-size: 2.75rem;
   text-transform: uppercase;
+  font-family: "gotham-medium-webfont";
+  font-weight: 400;
+  color: #2c4058;
+  position: relative;
+  text-align: center;
+}
+.title:before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 1px;
+  background-color: #2c4058;
+  top: -40px;
+  left: 45%;
 }
 
 header {
@@ -162,17 +176,7 @@ header {
 .projects_title {
   font-family: "gothambold1";
   color: #2c4058;
-  position: relative;
   margin-bottom: 170px;
-}
-.projects_title:before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 1px;
-  background-color: #2c4058;
-  top: -40px;
-  left: 45%;
 }
 .projects_example {
   display: flex;
@@ -321,19 +325,10 @@ header {
 }
 .news_title {
   color: #fff;
-  font-family: "gotham-medium-webfont";
-  font-weight: 400;
-  position: relative;
   margin-bottom: 100px;
 }
-.news_title:before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 1px;
+.news_title::before {
   background-color: #fff;
-  top: -40px;
-  left: 45%;
 }
 .news_list-item {
   height: 514px;
@@ -389,10 +384,11 @@ header {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background: white;
-  background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759) 87%);
-  background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759) 87%);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759) 87%);
+  background: #e5e5e5;
+  background: -moz-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
+  background: -webkit-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
+  background: linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#000000", GradientType=1);
 }
 .news_list-item-author-wrap {
   display: flex;
@@ -460,15 +456,6 @@ header {
   position: relative;
   font-family: "gotham-medium-webfont";
 }
-.gallery_title:before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 1px;
-  background-color: #2c4058;
-  top: -40px;
-  left: 45%;
-}
 .gallery_wrap {
   display: flex;
   gap: 10px;
@@ -499,8 +486,12 @@ footer {
   background: center center/cover no-repeat;
   padding-top: 200px;
   padding-bottom: 200px;
+  position: relative;
 }
 
+.footer {
+  overflow: visible;
+}
 .footer_wrapper {
   width: 100%;
   max-width: 770px;
@@ -517,4 +508,78 @@ footer {
 .footer_copy span:nth-child(2) {
   margin: 10px;
   font-size: 1.25rem;
+}
+
+.contact-card {
+  width: 100%;
+  max-width: 770px;
+  background: center center/cover no-repeat;
+  padding: 90px 60px 80px;
+  position: absolute;
+  transform: translateX(40%);
+  top: -56%;
+  z-index: 1000;
+}
+.contact-card_title {
+  margin-bottom: 56px;
+}
+.contact-card_info-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-card_list {
+  width: calc(50%);
+}
+.contact-card_form {
+  width: calc(50%);
+  text-align: center;
+}
+.contact-card_form input {
+  width: 100%;
+  border: transparent;
+  border-bottom: 1px solid #d5d9de;
+  color: #d5d9de;
+  font-family: "GothamBook";
+  font-size: 1.125rem;
+  height: 38px;
+  padding-bottom: 12px;
+  outline: none;
+  margin-bottom: 30px;
+}
+.contact-card_form input:nth-child(2) {
+  margin-bottom: 30px;
+}
+.contact-card_form input:active, .contact-card_form input:focus {
+  border-bottom: 1px solid #2c4058;
+  color: #2c4058;
+}
+.contact-card_list-item {
+  color: #2c4058;
+  font-family: "GothamBook", sans-serif;
+  font-size: 1.125rem;
+  margin-bottom: 42px;
+}
+.contact-card_list-item:last-child {
+  margin-bottom: 0;
+}
+.contact-card_list-item a {
+  color: #2c4058;
+  font-family: "GothamBook", sans-serif;
+  font-size: 1.125rem;
+}
+.contact-card_list-item svg {
+  width: 16px;
+  height: 16px;
+  fill: #7e5aff;
+  margin-right: 5px;
+}
+.contact-card .btn-submit {
+  max-width: 140px;
+  background: transparent;
+  cursor: pointer;
+  margin-left: 57%;
+}
+.contact-card .btn-submit:hover {
+  background: #2c4058;
 }
