--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,20 @@ $root-font-size: 16px;
 .title{
     font-size: rem(44px);
     text-transform: uppercase;
+    font-family: 'gotham-medium-webfont';
+    font-weight: 400;
+    color: $font-color-balck;
+    position: relative;
+    text-align: center;
+    &:before {
+        content: '';
+        position: absolute;
+        width: 100px;
+        height: 1px;
+        background-color: $font-color-balck;
+        top: -40px;
+        left: 45%;
+    }
 }
 
 header{
@@ -160,17 +174,7 @@ header{
     &_title{
         font-family: 'gothambold1';
         color: $font-color-balck;
-        position: relative;
         margin-bottom: 170px;
-        &:before{
-            content: '';
-            position: absolute;
-            width: 100px;
-            height: 1px;
-            background-color: $font-color-balck;
-            top: -40px;
-            left: 45%;
-        }
     }
     &_example{
         display: flex;
@@ -323,19 +327,11 @@ header{
     }
     &_title{
         color: $font-color-white;
-        font-family: 'gotham-medium-webfont';
-        font-weight: 400;
-        position: relative;
         margin-bottom: 100px;
-        &:before {
-            content: '';
-            position: absolute;
-            width: 100px;
-            height: 1px;
+        &::before{
             background-color: $font-color-white;
-            top: -40px;
-            left: 45%;
         }
+        
     }
     &_list-item{
         height: 514px;
@@ -391,10 +387,11 @@ header{
                 bottom: 0;
                 width: 100%;
                 height: 100%;
-                background: rgb(255, 255, 255);
-                background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
-                background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
-                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
+                background: rgb(229, 229, 229);
+                background: -moz-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+                background: -webkit-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+                background: linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#000000", GradientType=1);
                 
             }
         }
@@ -472,15 +469,6 @@ header{
         margin-bottom: 100px;
         position: relative;
         font-family: 'gotham-medium-webfont';
-        &:before {
-            content: '';
-            position: absolute;
-            width: 100px;
-            height: 1px;
-            background-color: $font-color-balck;
-            top: -40px;
-            left: 45%;            
-        }
     }
     &_wrap{
         display: flex;
@@ -510,6 +498,7 @@ header{
 #map{
     height: 700px;
     width: 100%;
+    
 }
 
 footer{
@@ -517,9 +506,11 @@ footer{
     background: center center / cover no-repeat;
     padding-top: 200px;
     padding-bottom: 200px;
+    position: relative;
 }
 
 .footer{
+    overflow: visible;
     &_wrapper{
         width: 100%;
         max-width: 770px;
@@ -527,6 +518,7 @@ footer{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
     }
     &_copy{
         color: $font-color-white;
@@ -535,6 +527,82 @@ footer{
         & span:nth-child(2){
             margin: 10px;
             font-size: rem(20px);
+        }
+    }
+}
+
+.contact-card{
+    width: 100%;
+    max-width: 770px;
+    background: center center / cover no-repeat;
+    padding: 90px 60px 80px;
+    position: absolute;
+    transform: translateX(40%);
+    top: -56%;
+    z-index: 1000;
+
+    &_title{
+        margin-bottom: 56px;
+    }
+    &_info-wrapper{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    &_list{
+        width: calc(50%);
+    }
+    &_form{
+        width: calc(50%);
+        text-align: center;
+        input{
+            width: 100%;
+            border: transparent;
+            border-bottom: 1px solid #d5d9de;
+            color: #d5d9de;
+            font-family: 'GothamBook';
+            font-size: rem(18px);
+            height: 38px;
+            padding-bottom: 12px;
+            outline: none;
+            margin-bottom: 30px;
+            &:nth-child(2){
+                margin-bottom: 30px;
+            }
+            &:active, &:focus{
+                border-bottom: 1px solid $font-color-balck;
+                color: $font-color-balck;
+            }
+        }
+    }
+    &_list-item{
+        color: $font-color-balck;
+        font-family: 'GothamBook',
+        sans-serif;
+        font-size: rem(18px);
+        margin-bottom: 42px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+        a{
+            color: $font-color-balck;
+            font-family: 'GothamBook', sans-serif;
+            font-size: rem(18px);
+        }
+        svg{
+            width: 16px;
+            height: 16px;
+            fill: #7e5aff;
+            margin-right: 5px;
+        }
+    }
+    .btn-submit{
+        max-width: 140px;
+        background: transparent;
+        cursor: pointer;
+        margin-left: 57%;
+        &:hover{
+            background: $font-color-balck;
         }
     }
 }
