--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,19 +45,73 @@ img {
   height: 1px;
   background-color: #2c4058;
   top: -40px;
-  left: 45%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 header {
   width: 100%;
-  height: 150px;
   position: fixed;
-  z-index: 1;
+  z-index: 9999999;
 }
 
 .logo svg {
   fill: #fff;
   width: 240px;
+}
+
+.scroll-round {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  position: relative;
+  display: block;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+.scroll-round::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  top: 40%;
+  left: 44%;
+  transform: rotate(-45deg);
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+}
+.links-item {
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  transition: all 0.2s;
+  margin-right: 20px;
+}
+.links-item:hover {
+  border-color: #2c4058;
+}
+.links-item:hover svg {
+  fill: #2c4058;
+}
+.links-item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.links-item svg {
+  transition: all 0.2s;
+  fill: #fff;
+  transform: translateY(60%);
+  width: 16px;
+  height: 16px;
 }
 
 .header {
@@ -69,6 +123,9 @@ header {
   display: inline-block;
   margin-right: 68px;
   text-transform: uppercase;
+}
+.header_list-item:hover .round {
+  background-color: #fff;
 }
 .header_list-item a {
   font-family: "GothamBook";
@@ -83,34 +140,8 @@ header {
   border: 1px solid #fff;
   margin-right: 14px;
 }
-.header_list-item .round:active {
-  background-color: #fff;
-}
 .header_list-item:last-child {
   margin-right: 0;
-}
-.header_links-item {
-  display: inline-block;
-  border: 1px solid rgba(255, 255, 255, 0.7);
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  margin-right: 20px;
-}
-.header_links-item a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.header_links-item:last-child {
-  margin-right: 0;
-}
-.header_links-item svg {
-  fill: #fff;
-  transform: translateY(60%);
-  width: 16px;
-  height: 16px;
 }
 
 .header_slider {
@@ -138,6 +169,20 @@ header {
   font-family: "GothamBook";
   font-weight: 350;
   letter-spacing: 2.5px;
+  margin-bottom: 150px;
+}
+
+.Header {
+  background: #55b6fe;
+  background: -moz-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714) 7%, rgba(110, 153, 255, 0.5886729692) 50%, rgba(125, 92, 249, 0.6026785714) 100%);
+  background: -webkit-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714) 7%, rgba(110, 153, 255, 0.5886729692) 50%, rgba(125, 92, 249, 0.6026785714) 100%);
+  background: linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714) 7%, rgba(110, 153, 255, 0.5886729692) 50%, rgba(125, 92, 249, 0.6026785714) 100%);
+  backdrop-filter: blur(2px);
+}
+
+.mobile-header {
+  width: 100%;
+  height: 60px;
 }
 
 .lSSlideOuter .lSPager.lSpg {
@@ -176,7 +221,7 @@ header {
 .projects_title {
   font-family: "gothambold1";
   color: #2c4058;
-  margin-bottom: 170px;
+  margin-bottom: 100px;
 }
 .projects_example {
   display: flex;
@@ -201,6 +246,8 @@ header {
   font-family: "gothambold1";
   color: #2c4058;
   margin-bottom: 40px;
+  font-size: 2.75rem;
+  text-transform: uppercase;
 }
 .projects_example-description {
   font-size: 1.125rem;
@@ -332,8 +379,7 @@ header {
 }
 .news_list-item {
   height: 514px;
-  width: 100%;
-  max-width: 370px;
+  width: 370px;
   background-color: #fff;
   position: relative;
 }
@@ -368,27 +414,28 @@ header {
   line-height: 30px;
 }
 .news_list-item-description {
-  height: 70px;
+  height: 65px;
   overflow-y: hidden;
   font-size: 1.125rem;
   font-family: "Open Sans", sans-serif;
   line-height: 30px;
   color: #4b5562;
   position: relative;
-}
-.news_list-item-description::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: #e5e5e5;
-  background: -moz-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
-  background: -webkit-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
-  background: linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822129) 80%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#000000", GradientType=1);
+  /* &::after{
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background: rgb(229, 229, 229);
+      background: -moz-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+      background: -webkit-linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+      background: linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#000000", GradientType=1);
+
+  } */
 }
 .news_list-item-author-wrap {
   display: flex;
@@ -421,7 +468,8 @@ header {
 .news .lSSlideOuter .lSPager.lSpg {
   position: absolute;
   top: 110%;
-  right: 36%;
+  left: 50%;
+  transform: translateX(-50%) !important;
 }
 .news .lSSlideOuter .lSPager.lSpg > li {
   display: inline-block;
@@ -479,7 +527,28 @@ header {
 
 #map {
   height: 700px;
+  position: relative;
+}
+
+#map_link {
+  display: block;
+  position: absolute;
   width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(73, 59, 59, 0.7);
+  color: #fff;
+  text-align: center;
+  line-height: 300px;
+  font-size: 24px;
+  opacity: 0;
+  transition: all 0.1s;
+  font-family: "GothamBook";
+  text-transform: uppercase;
+}
+#map_link:hover {
+  opacity: 1;
 }
 
 footer {
@@ -498,7 +567,6 @@ footer {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 .footer_copy {
   color: #fff;
@@ -509,6 +577,9 @@ footer {
   margin: 10px;
   font-size: 1.25rem;
 }
+.footer .links {
+  padding-top: 48px;
+}
 
 .contact-card {
   width: 100%;
@@ -516,9 +587,11 @@ footer {
   background: center center/cover no-repeat;
   padding: 90px 60px 80px;
   position: absolute;
-  transform: translateX(40%);
+  left: 50%;
+  transform: translateX(-50%);
   top: -56%;
   z-index: 1000;
+  box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.2);
 }
 .contact-card_title {
   margin-bottom: 56px;
