--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,15 +33,16 @@ $root-font-size: 16px;
         height: 1px;
         background-color: $font-color-balck;
         top: -40px;
-        left: 45%;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
 header{
     width: 100%;
-    height: 150px;
+    // height: 150px;
     position: fixed;
-    z-index: 1;
+    z-index: 9999999;
 }
 
 
@@ -51,16 +52,75 @@ header{
         width: 240px;
     }
 }
+
+.scroll-round{
+    width: 40px;
+    height: 40px;
+    border: 1px solid $font-color-white;
+    position: relative;
+    display: block;
+    border-radius: 50%;
+    margin: 0 auto;
+    &::after{
+        content: '';
+        position: absolute;
+        display: block;
+        width: 5px;
+        height: 5px;
+        border-left: 1px solid $font-color-white;
+        border-bottom: 1px solid $font-color-white;
+        top: 40%;
+        left: 44%;
+        transform: rotate(-45deg);
+    }
+}
+.links{
+    display: flex;
+    justify-content: space-between;
+    &-item {
+        // display: inline-block;
+        border: 1px solid rgba($font-color-white, $alpha: .7);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        transition: all .2s;
+        margin-right: 20px;
+        &:hover{
+            border-color: $font-color-balck;
+            svg{
+                fill: $font-color-balck;
+            }
+        }
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+        svg {
+            transition: all .2s;
+            fill: $font-color-white;
+            transform: translateY(60%);
+            width: 16px;
+            height: 16px;
+        }
+    }
+}
+
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
     &_list{
         &-item{
             display: inline-block;
             margin-right: 68px;
             text-transform: uppercase;
+            &:hover{
+                .round{
+                    background-color: #fff;
+                }
+            }
             a{
                 font-family: 'GothamBook';
                 color: $font-color-white;
@@ -74,38 +134,13 @@ header{
                 border-radius: 50%;
                 border: 1px solid $font-color-white;
                 margin-right: 14px;
-                &:active{
-                    background-color: $font-color-white;
-                }
             }
             &:last-child{
                 margin-right: 0;
             }
         }
     }
-    &_links-item{
-        display: inline-block;
-        border: 1px solid rgba($font-color-white, $alpha: .7);
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        margin-right: 20px;
-        a{
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-        &:last-child{
-            margin-right: 0;
-        }
-        svg{
-            fill: $font-color-white;
-            transform: translateY(60%);
-            width: 16px;
-            height: 16px;
-        }
-    }
+    
 }
 
 .header_slider{
@@ -133,8 +168,22 @@ header{
             font-family: 'GothamBook';
             font-weight: 350;
             letter-spacing: 2.5px;
+            margin-bottom: 150px;
         }
     }
+}
+
+.Header{
+    background: rgb(85, 182, 254);
+    background: -moz-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
+    background: -webkit-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
+    background: linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
+    backdrop-filter: blur(2px);
+}
+
+.mobile-header{
+    width: 100%;
+    height: 60px; 
 }
 
 .lSSlideOuter .lSPager.lSpg{
@@ -174,7 +223,7 @@ header{
     &_title{
         font-family: 'gothambold1';
         color: $font-color-balck;
-        margin-bottom: 170px;
+        margin-bottom: 100px;
     }
     &_example{
         display: flex;
@@ -199,6 +248,8 @@ header{
             font-family: 'gothambold1';
             color: $font-color-balck;
             margin-bottom: 40px;
+            font-size: rem(44px);
+            text-transform: uppercase;
         }
         &-description{
             font-size: rem(18px);
@@ -335,8 +386,7 @@ header{
     }
     &_list-item{
         height: 514px;
-        width: 100%;
-        max-width: 370px;
+        width: 370px;
         background-color: #fff;
         position: relative;
         &_link{
@@ -372,14 +422,14 @@ header{
             line-height: 30px;
         }
         &-description{
-            height: 70px;
+            height: 65px;
             overflow-y: hidden;
             font-size: rem(18px);
             font-family: 'Open Sans', sans-serif;
             line-height: 30px;
             color: $font-color-balck2;
             position: relative;
-            &::after{
+            /* &::after{
                 content: '';
                 display: block;
                 position: absolute;
@@ -393,7 +443,7 @@ header{
                 background: linear-gradient(180deg, rgba(229, 229, 229, 0) 7%, rgba(196, 199, 199, 0) 26%, rgba(0, 0, 0, 0.3617822128851541) 80%);
                 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e5e5e5", endColorstr="#000000", GradientType=1);
                 
-            }
+            } */
         }
         &-author-wrap{
             display: flex;
@@ -427,7 +477,8 @@ header{
     .lSSlideOuter .lSPager.lSpg {
         position: absolute;
         top: 110%;
-        right: 36%;
+        left: 50%;
+        transform: translateX(-50%)!important; //Мне пришлось, иначе его никак не перебить=)
 
         >li {
             display: inline-block;
@@ -497,8 +548,29 @@ header{
 
 #map{
     height: 700px;
+     
+    position: relative;
+}
+
+#map_link {
+    display: block;
+    position: absolute;
     width: 100%;
-    
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba($color: #493b3b, $alpha: .7);
+    color: $font-color-white;
+    text-align: center;
+    line-height: 300px;
+    font-size: 24px;
+    opacity: 0;
+    transition: all .1s;
+    font-family: "GothamBook";
+    text-transform: uppercase;
+    &:hover {
+        opacity: 1;
+    }
 }
 
 footer{
@@ -517,7 +589,7 @@ footer{
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        // align-items: center;
         
     }
     &_copy{
@@ -529,6 +601,9 @@ footer{
             font-size: rem(20px);
         }
     }
+    .links{
+        padding-top: 48px;
+    }
 }
 
 .contact-card{
@@ -537,10 +612,11 @@ footer{
     background: center center / cover no-repeat;
     padding: 90px 60px 80px;
     position: absolute;
-    transform: translateX(40%);
+    left: 50%;
+    transform: translateX(-50%);
     top: -56%;
     z-index: 1000;
-
+    box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
     &_title{
         margin-bottom: 56px;
     }
