--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -23,36 +23,42 @@
 /* Font downloaded from FontsForWeb.com */
 
 
-/* open-sans-regular - latin */
+/* open-sans-regular - latin-ext_latin */
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: url('../fonts/open-sans-v20-latin-regular.eot');
+	src: url('../fonts/open-sans-v20-latin-ext_latin-regular.eot');
 	/* IE9 Compat Modes */
 	src: local(''),
-		url('../fonts/open-sans-v20-latin-regular.eot') format('embedded-opentype'),
+		url('../fonts/open-sans-v20-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'),
 		/* IE6-IE8 */
-		url('../fonts/open-sans-v20-latin-regular.woff2') format('woff2'),
+		url('../fonts/open-sans-v20-latin-ext_latin-regular.woff2') format('woff2'),
 		/* Super Modern Browsers */
-		url('../fonts/open-sans-v20-latin-regular.woff') format('woff'),
-		
+		url('../fonts/open-sans-v20-latin-ext_latin-regular.woff') format('woff'),
+		/* Modern Browsers */
+		url('../fonts/open-sans-v20-latin-ext_latin-regular.ttf') format('truetype'),
+		/* Safari, Android, iOS */
+		url('../fonts/open-sans-v20-latin-ext_latin-regular.svg#OpenSans') format('svg');
+	/* Legacy iOS */
 }
 
-/* open-sans-italic - latin */
+/* open-sans-italic - latin-ext_latin */
 @font-face {
 	font-family: 'Open Sans';
 	font-style: italic;
 	font-weight: 400;
-	src: url('../fonts/open-sans-v20-latin-italic.eot');
+	src: url('../fonts/open-sans-v20-latin-ext_latin-italic.eot');
 	/* IE9 Compat Modes */
 	src: local(''),
-		url('../fonts/open-sans-v20-latin-italic.eot') format('embedded-opentype'),
+		url('../fonts/open-sans-v20-latin-ext_latin-italic.eot?#iefix') format('embedded-opentype'),
 		/* IE6-IE8 */
-		url('../fonts/open-sans-v20-latin-italic.woff2') format('woff2'),
+		url('../fonts/open-sans-v20-latin-ext_latin-italic.woff2') format('woff2'),
 		/* Super Modern Browsers */
-		url('../fonts/open-sans-v20-latin-italic.woff') format('woff'),
-		
-		
+		url('../fonts/open-sans-v20-latin-ext_latin-italic.woff') format('woff'),
+		/* Modern Browsers */
+		url('../fonts/open-sans-v20-latin-ext_latin-italic.ttf') format('truetype'),
+		/* Safari, Android, iOS */
+		url('../fonts/open-sans-v20-latin-ext_latin-italic.svg#OpenSans') format('svg');
 	/* Legacy iOS */
 }
