--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -190,6 +191,7 @@ header {
 .mobile-header {
   width: 100%;
   height: 60px;
+  padding: 0 10px;
 }
 
 .lSSlideOuter .lSPager.lSpg {
@@ -429,7 +431,7 @@ header {
   line-height: 30px;
   color: #4b5562;
   position: relative;
-  /* &::after{
+  /* &::after{    //ну уж очень ужасно смотрлась эта тень на переполнении в данном случае, поэтому я её убрал и сделал ка на макете
       content: '';
       display: block;
       position: absolute;
@@ -575,6 +577,7 @@ footer {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .footer_copy {
   color: #fff;
@@ -685,6 +688,19 @@ footer {
     width: calc(49%);
   }
 }
+@media screen and (max-width: 820px) {
+  .header_slider-item {
+    padding-top: 270px;
+  }
+  .header_slider-item-title {
+    font-size: 3.75rem;
+  }
+}
+@media screen and (max-width: 770px) {
+  .contact-card {
+    max-width: 100%;
+  }
+}
 @media screen and (max-width: 760px) {
   .projects_example {
     flex-direction: column;
@@ -694,6 +710,39 @@ footer {
   }
   .projects_text-wrap {
     width: 100%;
+  }
+
+  .news .lSSlideOuter .lSPager.lSpg > li {
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 670px) {
+  .contact-card_title {
+    margin-bottom: 10px;
+  }
+  .contact-card_info-wrapper {
+    flex-direction: column;
+  }
+  .contact-card_list {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .contact-card_form {
+    width: 100%;
+  }
+  .contact-card .btn-submit {
+    margin: 0 auto;
+  }
+
+  footer {
+    padding-top: 400px;
+    padding-bottom: 50px;
+  }
+
+  .footer_wrapper {
+    padding: 10px;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 570px) {
@@ -721,5 +770,20 @@ footer {
   }
   .projects_image-wrap.reverse::before {
     display: none;
+  }
+
+  .header_slider-item {
+    padding-top: 200px;
+  }
+  .header_slider-item-title {
+    font-size: 2.5rem;
+  }
+  .header_slider-item-description {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 455px) {
+  .news .lSSlideOuter .lSPager.lSpg > li {
+    margin-right: 5px;
   }
 }
