--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -174,7 +174,8 @@ header{
 
 .mobile-header{
     width: 100%;
-    height: 60px; 
+    height: 60px;
+    padding: 0 10px; 
 }
 
 .lSSlideOuter .lSPager.lSpg{
@@ -421,7 +422,7 @@ header{
             line-height: 30px;
             color: $font-color-balck2;
             position: relative;
-            /* &::after{
+            /* &::after{    //ну уж очень ужасно смотрлась эта тень на переполнении в данном случае, поэтому я её убрал и сделал ка на макете
                 content: '';
                 display: block;
                 position: absolute;
@@ -583,7 +584,7 @@ footer{
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
-        // align-items: center;
+        flex-wrap: wrap;
         
     }
     &_copy{
@@ -701,6 +702,23 @@ footer{
     
 }
 
+@media screen and (max-width:820px){
+    .header_slider{
+        &-item{
+            padding-top: 270px;
+            &-title{
+                font-size: rem(60px);
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 770px){
+    .contact-card{ 
+        max-width: 100%;
+    }
+}
+
 @media screen and (max-width: 760px){
     .projects {
         &_example {
@@ -714,6 +732,44 @@ footer{
         &_text-wrap {
             width: 100%;
         }
+    }
+    .news{
+        .lSSlideOuter .lSPager.lSpg {
+            >li {
+                margin-right: 20px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 670px){
+    .contact-card{
+        &_title{
+            margin-bottom: 10px;
+        }
+        &_info-wrapper{
+            flex-direction: column;
+        }
+        &_list{
+            width: 100%;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        &_form{
+            width: 100%;
+            // text-align: center;
+        }
+        .btn-submit {
+            margin: 0 auto;
+        }
+    }
+    footer{
+        padding-top: 400px;
+        padding-bottom: 50px;
+    }
+    .footer_wrapper{
+        padding: 10px;
+        justify-content: center;
     }
 }
 
@@ -748,6 +804,28 @@ footer{
             }
             &.reverse::before {
                 display: none;
+            }
+        }
+    }
+    .header_slider {
+        &-item {
+            padding-top: 200px;
+            &-title {
+                font-size: rem(40px);
+            }
+            &-description{
+                font-size: rem(16px);
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 455px){
+    .news {
+        .lSSlideOuter .lSPager.lSpg {
+
+            >li {
+                margin-right: 5px;
             }
         }
     }
