--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 @import 'reset';
 @import 'variables';
 
+
+/* Мобильное меню и форму обратной связи я не успел сделать. С галереей у меня не получилось совсем */
+
 .container{
     width: 90%;
     max-width: 1170px;
@@ -23,7 +26,9 @@
         background-color: $font-color-balck;
         top: -40px;
         left: 50%;
-        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
+                transform: translateX(-50%);
     }
 }
 
@@ -62,18 +67,26 @@ header{
         border-bottom: 1px solid $font-color-white;
         top: 40%;
         left: 44%;
-        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+                transform: rotate(-45deg);
     }
 }
 .links{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     &-item {
         border: 1px solid rgba($font-color-white, $alpha: .7);
         border-radius: 50%;
         width: 40px;
         height: 40px;
         text-align: center;
+        -webkit-transition: all .2s;
+        -o-transition: all .2s;
         transition: all .2s;
         margin-right: 20px;
         &:hover{
@@ -88,9 +101,13 @@ header{
             height: 100%;
         }
         svg {
+            -webkit-transition: all .2s;
+            -o-transition: all .2s;
             transition: all .2s;
             fill: $font-color-white;
-            transform: translateY(60%);
+            -webkit-transform: translateY(60%);
+                -ms-transform: translateY(60%);
+                    transform: translateY(60%);
             width: 16px;
             height: 16px;
         }
@@ -98,10 +115,18 @@ header{
 }
 
 .header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     &_list{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         &-item{
             display: inline-block;
@@ -166,10 +191,10 @@ header{
 
 .Header{
     background: rgb(85, 182, 254);
-    background: -moz-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
-    background: -webkit-linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
+    background: -o-linear-gradient(36deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
     background: linear-gradient(54deg, rgba(85, 182, 254, 0.6026785714285714) 7%, rgba(110, 153, 255, 0.5886729691876751) 50%, rgba(125, 92, 249, 0.6026785714285714) 100%);
-    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
 }
 
 .mobile-header{
@@ -218,16 +243,24 @@ header{
         margin-bottom: 100px;
     }
     &_example{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         padding-top: 70px;
         
         &:nth-of-type(1) {
             margin-bottom: 140px;
         }
         &.reverse{
-            flex-direction: row-reverse;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: reverse;
+                -ms-flex-direction: row-reverse;
+                    flex-direction: row-reverse;
             padding-top: 0;
         }
         &-title1{
@@ -308,6 +341,8 @@ header{
     font-size: rem(14px);
     line-height: 48px;
     color: $font-color-balck;
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
     &:hover{
         color: $font-color-white;
@@ -330,6 +365,8 @@ header{
         border: 1px solid rgba($color: $font-color-white, $alpha: .6);
         border-radius: 50%;
         opacity: .5;
+        -webkit-transition: all .2s;
+        -o-transition: all .2s;
         transition: all .2s;
         &:hover{
             opacity: 1;
@@ -345,7 +382,9 @@ header{
                 height: 5px;
                 border-left: 1px solid rgba($color: $font-color-white, $alpha: .6);
                 border-bottom: 1px solid rgba($color: $font-color-white, $alpha: .6);
-                transform: rotate(45deg);
+                -webkit-transform: rotate(45deg);
+                    -ms-transform: rotate(45deg);
+                        transform: rotate(45deg);
                 top: 43%;
                 left: 46%;
             }
@@ -361,7 +400,9 @@ header{
                 height: 5px;
                 border-left: 1px solid $font-color-white;
                 border-bottom: 1px solid $font-color-white;
-                transform: rotate(-135deg);
+                -webkit-transform: rotate(-135deg);
+                    -ms-transform: rotate(-135deg);
+                        transform: rotate(-135deg);
                 opacity: .5;
                 top: 43%;
                 left: 40%;                
@@ -388,6 +429,8 @@ header{
             margin-bottom: 22px;
             position: relative;
             &::after{
+                -webkit-transition: all .2s;
+                -o-transition: all .2s;
                 transition: all .2s;
                 position: absolute;
                 content: '';
@@ -397,8 +440,8 @@ header{
                 top: 0;
                 opacity: 0;
                 background: rgb(255, 255, 255);
-                background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
-                background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
+                background: -webkit-gradient(linear, left top, left bottom, color-stop(46%, rgba(255, 255, 255, 0)), color-stop(87%, rgba(0, 0, 0, 0.6306897759103641)));
+                background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
                 background: linear-gradient(180deg, rgba(255, 255, 255, 0) 46%, rgba(0, 0, 0, 0.6306897759103641) 87%);
             }
             &:hover{
@@ -447,8 +490,12 @@ header{
             } */
         }
         &-author-wrap{
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             position: absolute;
             left: 22px;
             bottom: 30px;
@@ -479,7 +526,9 @@ header{
         position: absolute;
         top: 110%;
         left: 50%;
-        transform: translateX(-50%)!important; //Мне пришлось, иначе его никак не перебить=)
+        -webkit-transform: translateX(-50%)!important;
+            -ms-transform: translateX(-50%)!important;
+                transform: translateX(-50%)!important; //Мне пришлось, иначе его никак не перебить=)
 
         >li {
             display: inline-block;
@@ -523,6 +572,8 @@ header{
         font-family: 'gotham-medium-webfont', sans-serif;
     }
     &_wrap{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         // flex-wrap: wrap;
         gap: 10px;
@@ -542,11 +593,19 @@ header{
             display: block;
             width: 100%;
             span{
+                -webkit-transition: all .3s;
+                -o-transition: all .3s;
                 transition: all .3s;
                 opacity: 0;
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                        justify-content: center;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
                 width: 80px;
                 height: 80px;
                 color: $font-color-white;
@@ -555,7 +614,9 @@ header{
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%, -50%);
+                -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
                 font-size: rem(18px);
                 font-family: 'gotham-medium-webfont', sans-serif;
                 &::before, &::after{
@@ -568,15 +629,20 @@ header{
                     border: 1px solid currentColor;
                 }
                 &::after{
-                    transform: rotate(90deg);
+                    -webkit-transform: rotate(90deg);
+                        -ms-transform: rotate(90deg);
+                            transform: rotate(90deg);
                 }
             }
 
         }
         &_second{
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
             // justify-content: space-around;
-            flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
             gap: 10px;
             width: calc(50%);
             a{                
@@ -611,6 +677,8 @@ header{
     line-height: 300px;
     font-size: 24px;
     opacity: 0;
+    -webkit-transition: all .1s;
+    -o-transition: all .1s;
     transition: all .1s;
     font-family: "GothamBook", sans-serif;
     text-transform: uppercase;
@@ -633,9 +701,14 @@ footer{
         width: 100%;
         max-width: 770px;
         margin: 0 auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         
     }
     &_copy{
@@ -659,17 +732,25 @@ footer{
     padding: 90px 60px 80px;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     top: -56%;
     z-index: 1000;
-    box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
+    -webkit-box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
+            box-shadow: 0 6px 50px 0 rgb(0 0 0 / 20%);
     &_title{
         margin-bottom: 56px;
     }
     &_info-wrapper{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
     &_list{
         width: calc(50%);
@@ -753,7 +834,8 @@ footer{
 @media screen and (max-width: 850px){
     .gallery{
         &_wrap{
-            flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
         }
         &_inner{
             width: 100%;
@@ -795,7 +877,10 @@ footer{
 @media screen and (max-width: 760px){
     .projects {
         &_example {
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
         }
 
         &_image-wrap {
@@ -821,7 +906,10 @@ footer{
             margin-bottom: 10px;
         }
         &_info-wrapper{
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
         }
         &_list{
             width: 100%;
@@ -842,7 +930,9 @@ footer{
     }
     .footer_wrapper{
         padding: 10px;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 }
 
